; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_coreaudio_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_coreaudio_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"device_id\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @coreaudio_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @coreaudio_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.coreaudio_data*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.coreaudio_data*
  store %struct.coreaudio_data* %7, %struct.coreaudio_data** %5, align 8
  %8 = load %struct.coreaudio_data*, %struct.coreaudio_data** %5, align 8
  %9 = call i32 @coreaudio_shutdown(%struct.coreaudio_data* %8)
  %10 = load %struct.coreaudio_data*, %struct.coreaudio_data** %5, align 8
  %11 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @bfree(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @obs_data_get_string(i32* %14, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @bstrdup(i32 %15)
  %17 = load %struct.coreaudio_data*, %struct.coreaudio_data** %5, align 8
  %18 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.coreaudio_data*, %struct.coreaudio_data** %5, align 8
  %20 = call i32 @coreaudio_try_init(%struct.coreaudio_data* %19)
  ret void
}

declare dso_local i32 @coreaudio_shutdown(%struct.coreaudio_data*) #1

declare dso_local i32 @bfree(i32) #1

declare dso_local i32 @bstrdup(i32) #1

declare dso_local i32 @obs_data_get_string(i32*, i8*) #1

declare dso_local i32 @coreaudio_try_init(%struct.coreaudio_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
